# ghprj

./: .cursorignore  .cursorindexignore  .cursorindexingignore  .gitignore  CLAUDE.md  GEMINI.md  ghrepo.code-workspace  jp-docstring-spec.md  links.yaml  new_pyproject.toml  new_pyproject.yaml  pyproject.toml  pyproject.yaml  setup.ps1  setup.sh  x.ps1  y.ps1
.claude/: settings.local.json
_private/: add_force_sub_command_list-requirement.md  add_force_sub_command_list-spec.md  command_list_requirement.md  diff_update-spec.md  format-memo.md  sub_command_list-requirement-2.md  sub_command_list-requirement.md  sub_command_list-spec.md
_private/20260314/: diff_update-req.md
docs-old/: sub_command_list-spec.md  subcommand_setup-spec.md
docs/req/: req-subcommand-search.md
docs/spec/: AppConfigx.md  Clix.md  CommandList.md  CommandSearch.md  CommandSetup.md  Ghrepo.md  index.md
src/ghprj/: __init__.py  appconfig.py  appconfigx.py  appstore.py  cli.py  clix.py  command.py  command_list.py  command_project.py  command_repo.py  command_setup.py  command_user.py  ghprj.py  main.py  storex.py  timex.py
src/ghrepo/: __init__.py  appconfigx.py  clix.py  command_list.py  command_search.py  command_setup.py  command_user.py  ghrepo.py
